# r-knowledge

./: .gitignore  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
knowledge/: README.md  __init__.py  ansible_vars.py  big_split.py  cache.py  cli.py  config.py  consolidate.py  db.py  decisions.py  embedder.py  fts.py  gitignore.py  graph.py  history.py  hybrid_search.py  indexer.py  outbox.py  paths.py  projects.py  query_cache.py  relations.py  sanitizer.py  scanner.py  search.py  settings.py  skill_render.py  variables.py  whitespace.py
knowledge/backends/: postgres.py
knowledge/chunkers/: __init__.py  base.py  dockerfile_chunker.py  hcl_chunker.py  javascript_chunker.py  jinja_chunker.py  json_chunker.py  markdown_chunker.py  python_chunker.py  shell_chunker.py  yaml_chunker.py
knowledge/resolvers/: __init__.py  ansible_resolver.py  base.py  github_actions_resolver.py  helm_resolver.py  javascript_resolver.py  kustomize_resolver.py  python_resolver.py  terraform_resolver.py  yaml_classifier.py
knowledge/schema/postgres/: 001_init.sql
skill-template/: AGENTS.md  README-copy-me.md  SKILL.md  knowledge.mdc
skill-template/knowledge-bench/: SKILL.md
tests/: test_chunkers_smoke.py  test_memory_scrub.py  test_skill_sync.py
