[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-knowledge"
version = "0.1.0"
description = "Local semantic code search: multi-repo, SQLite-backed, gitignore-aware, secret-sanitizing."
requires-python = ">=3.10"
readme = "README.md"
authors = [{name = "Andrii Kudlaienko"}]
license = {text = "MIT"}
classifiers = ["License :: OSI Approved :: MIT License"]

# Core deps: vector store + embeddings + AST parsers + gitignore + config I/O.
# sentence-transformers pulls torch (~300MB on ARM) — documented in README.
dependencies = [
    # APSW is a SQLite wrapper that always exposes loadable-extension support,
    # unlike stdlib sqlite3 on Homebrew/python.org macOS builds (which disable
    # it at compile time, breaking sqlite-vec). APSW ships binary wheels for
    # macOS ARM/x86, Linux, and Windows. Recommended by sqlite-vec docs.
    "apsw>=3.44",
    "sqlite-vec>=0.1.6",
    "sentence-transformers>=2.7",
    # tree-sitter-languages (bundled grammars, pinned tree-sitter<0.22) is
    # abandoned upstream and ships no cp313 wheels — it broke CI on Python
    # 3.13. tree-sitter-language-pack is the maintained successor for
    # get_parser(name), BUT: as of 1.7 the project (now "Kreuzberg") rewrote
    # its internals around a custom Rust-native Node/Tree/Parser API
    # (str-only .parse(), node.kind()/.start_byte() as *methods*, no
    # .children/.named_children lists) that is NOT drop-in compatible with
    # our node-walking chunkers/resolvers, which expect the classic
    # tree_sitter.Parser/Node surface (.parse(bytes), node.type, node.children,
    # node.start_byte as attributes). Verified: 1.6.1 is the last release on
    # the classic API, still ships cp310-abi3 wheels (Python-version-agnostic,
    # confirmed working through 3.14) and pulls tree-sitter>=0.24 (which has
    # its own cp313 wheels) — so it fixes the original CI break without the
    # 1.7+ API rewrite. Do not bump past <1.7 without re-verifying get_parser's
    # return type against tree_sitter.Parser first.
    "tree-sitter-language-pack>=1.6.1,<1.7",
    "numpy>=1.26",
    "pathspec>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov"]
# Shared PostgreSQL backend (storage.mode = "shared_postgresql"). Optional;
# the default sqlite path needs none of these. psycopg[binary] ships wheels
# for macOS/Linux so users don't need libpq dev headers.
postgres = ["psycopg[binary]>=3.2", "pgvector>=0.3"]

[project.scripts]
knowledge = "knowledge.cli:main"

[tool.setuptools]
packages = [
    "knowledge",
    "knowledge.chunkers",
    "knowledge.backends",
    "knowledge.migrate",
    "knowledge.schema",
    "knowledge.schema.postgres",
]

[tool.setuptools.package-data]
"knowledge.schema.postgres" = ["*.sql"]

[tool.pytest.ini_options]
markers = [
    "integration: opt-in end-to-end tests requiring Docker (deselected by default in CI)",
]
